# SINDIT20

./: .editorconfig  .gitignore  .gitlab-ci.yml  .gitleaks.toml  .pre-commit-config.yaml  AGENTS.md  Dockerfile  README.md  api_testing.ipynb  docker-compose.yaml  docker-entrypoint.sh  hello.py  initialize_connectors.py  initialize_kg_connectors.py  initialize_objects.py  initialize_vault.py  junit.xml  my_test.py  pypi.md  pyproject.toml  requirements.txt  run_backend.py  run_sindit.py  run_test.py  sonar-project.properties  test.ipynb  testRDFModel.ipynb  test_s3_upload_from_api.py  test_s3_uploads.py  test_xiangma_data.ipynb  testing.ipynb  upload_to_s3.py
GraphDB/: .gitignore  Dockerfile  docker-entrypoint.sh  entrypoint.sh  graphdb_install.sh  graphdb_preload.sh  graphdb_reload.sh  graphdb_start.sh  repo-config.ttl  run_graphdb_start.slurm
GraphDB/graph_model/: SINDITKG.ttl  dataspace.ttl  relationship.ttl  units.ttl
api/: api.py  authentication_endpoints.py  connection_endpoints.py  dataspace_endpoints.py  kg_endpoints.py  kg_relationship_endpoints.py  main.py  metamodel_endpoints.py  password_hash.py  vault_endpoints.py  workspace_endpoints.py
connectors/: README.md  connector.py  connector_factory.py  connector_influxdb.py  connector_mqtt.py  connector_postgresql.py  connector_s3.py  property_influxdb.py  property_mqtt.py  property_postgresql.py  property_s3.py  s3_connector.py  setup_connectors.py
docs/: README.md
environment_and_configuration/: config.cfg  dev_environment_backend.env  docker_environment_backend.env  vault.properties
keycloak/: .env.example  Dockerfile  README.md  docker-compose.keycloak.yaml  entrypoint.sh
knowledge_graph/: dataspace_model.py  graph_model.py  kg_connector.py  relationship_model.py  sindit_kg_connector.py
ruuvitag/: README.md  ruuvitag_datacollector.py  ruuvitag_discoverer.py  test_ruuvitag.py
semantic_knowledge_graph/: GraphDBPersistenceService.py  SemanticKGPersistenceService.py  sindit_kg_connector.py
tests/: _test_graphdb_persistence_service.py  fake_mqtt_broker.py  test_connectors.py  test_fastapi.py  test_graphdb_persistence_service.py  test_hello.py  test_ruuvitag.py
util/: client_api.py  datetime_util.py  log.py
(+69 files in other folders)
