[tool.isort]
multi_line_output = 3
line_length = 88
include_trailing_comma = true
profile = "black"

[tool.black]
line_length = 88

[tool.poetry]
name = "SINDIT"
version = "0.0.1"
authors = ["author <author@sintef.no>"]
description = "SINTEF Digital Twin Framework"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
requests = "^2.31.0"
httpx = "^0.26.0"
mkdocs = "^1.5.3"
fastapi = "0.110.1"
uvicorn = "^0.29.0"
rdflib = "7.0.0"
jproperties = "2.1.1"
hvac = "2.2.0"
pandas ="2.2.2"
tqdm = "^4.66.4"
pytest-mock = "^3.14.0"
pytest-asyncio = "^0.23.8"
ruuvitag-sensor = "^2.3.1"
bleak = "^0.22.2"
influxdb-client = "^1.44.0"
paho-mqtt = "^2.1.0"
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.10"
boto3 = "^1.35.54"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"
coverage = "^7.3.2"
coverage-badge = "^1.1.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = [
    "tests",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "gitlab_exempt: marks tests not working in GitLab CI/CD pipeline",
    "ble: marks tests that require BLE device",
]
